<resources>
    <string name="app_name">Proyecto moviles</string>
    <string name="proveedor">Proveedor</string>
    <string name="tendero">Tendero</string>
    <string name="buscar">Buscar</string>
    <string name="limpieza_de_cocina">Limpieza de cocina</string>
    <string name="limpieza_de_casa">Limpieza de casa</string>
    <string name="aseo_personal">Aseo personal</string>
    <string name="title_activity_orden">Orden</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="categor_a">Categoría:</string>
    <string name="producto">Producto:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="lugar_de_destino">Lugar de destino:</string>
    <string name="calcular_total">Calcular Total</string>
    <string name="total_de_la_venta">Total de la Venta: $</string>
    <string name="categoria">Categoría:</string>
    <string name="Producto">Producto:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="calcular_precio_total">Calcular Precio Total</string>
    <string name="precio_total_de_venta">Precio Total de Venta: $</string>
    <string name="aseo_personal2x1" />
    <string name="limpieza_de_casa2x1" />
    <string name="limpieza_de_cocina2x1" />
    <string name="escojer" />
    <string name="SEARCH">SEARCH</string>
    <string name="KITCHENCLEANING">KITCHEN CLEANING</string>
    <string name="CLEANINGHOUSE">CLEANING HOUSE</string>
    <string name="PERSONALHYGIENE">PERSONAL HYGIENE</string>
    <string name="choose">CHOOSE</string>
    <string name="kitchen_cleaning2x1">KITCHEN CLEANING2x1</string>
    <string name="cleaning_house2x1">CLEANING HOUSE2x1</string>
    <string name="personal_hygiene2x1">PERSONAL HYGIENE2x1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="Emial">Email</string>
    <string name="Password">Password</string>
    <string name="Pass">Password</string>
    <string name="update">Update</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signUp">SIGN UP</string>
    <string name="Email">Email</string>
    <string name="sign_Up">SIGN UP</string>
    <string name="dishwasher">DISHWASHER</string>
    <string name="glitter_sponge">GLITTER SPONGE</string>
    <string name="broom">broom</string>
    <string name="floor_mop">floor mop</string>
    <string name="deodorant">DEODORANT</string>
    <string name="toothpaste">TOOTHPASTE</string>
</resources>