<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="146dp"
        app:srcCompat="@mipmap/logomoviles"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#F23C5C"
        android:textColorHint=" #f23c5c "
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="237dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#F23C5C"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="355dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:backgroundTint="#f23c5c"
        android:text="@string/sign_in"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="457dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="87dp"
        android:layout_height="52dp"
        android:backgroundTint="#f23c5c"
        android:text="@string/sign_up"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="457dp" />


</androidx.constraintlayout.widget.ConstraintLayout>